[tool.poetry]
name = "heartbeat"
version = "0.1.0"
description = ""
authors = ["David Buckley <buckley.w.david@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.0"
flask-socketio = "^3.0"
eventlet = "^0.23.0"
gunicorn = "^19.8"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
mypy = "^0.610.0"
pylint = "^1.9"
